argocd/applications/tengri/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tengri-grpc
  labels:
    app.kubernetes.io/name: tengri
spec:
  selector:
    app.kubernetes.io/name: tengri
    app.kubernetes.io/component: control-plane
  ports:
    - name: tcp-grpc
      port: 50051
      targetPort: grpc
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tengri-gateway
  labels:
    app.kubernetes.io/name: tengri
    app.kubernetes.io/component: gateway
spec:
  selector:
    app.kubernetes.io/name: tengri
    app.kubernetes.io/component: control-plane
  ports:
    - name: http
      port: 8080
      targetPort: gateway
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tengri-preview
  labels:
    app.kubernetes.io/name: tengri
    app.kubernetes.io/component: preview
spec:
  selector:
    app.kubernetes.io/name: tengri
    app.kubernetes.io/component: control-plane
  ports:
    - name: http
      port: 8081
      targetPort: preview
      protocol: TCP
